Fix modernizer warnings