@@ -40,13 +40,7 @@ public class CleanupUrlFormatter extends Formatter {
         if (matcher.find()) {
             toDecode = matcher.group(1);
         }
-        try {
-            decodedLink = URLDecoder.decode(toDecode, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            LOGGER.warn("Used unsupported character encoding", e);
-        }
-
-        return decodedLink;
+        return URLDecoder.decode(toDecode, StandardCharsets.UTF_8);
     }
 
     @Override
